--- a/.github/workflows/run-tests-on-pr.yml
+++ b/.github/workflows/run-tests-on-pr.yml
@@ -26,9 +26,6 @@ jobs:
           python-version: ${{ matrix.python_version }}
 
       - name: "run-tests"
-        env:
-          MEDM_EMAIL: ${{ secrets.MEDM_EMAIL }}
-          MEDM_PASSW: ${{ secrets.MEDM_PASSW }}
         run: |
           # we dont' create venv, since in, in fact,
           # using github actions we're already 
@@ -50,4 +47,4 @@ jobs:
         run: |
           echo ${{ env.USER }}
           echo ${{ env.TOKEN }}
-          python3 -m pip install git+https://${{ env.USER }}:${{ env.TOKEN }}@github.com/egslava/pymedm.git@develop#subdirectory=soft
+          python3 -m pip install git+https://${{ env.USER }}:${{ env.TOKEN }}@github.com/egslava/sublesee.git@develop#subdirectory=soft
