--- a/.github/workflows/run-tests-on-pr.yml
+++ b/.github/workflows/run-tests-on-pr.yml
@@ -39,4 +39,5 @@ jobs:
           USER: ${{ github.actor }}
           TOKEN: ${{ github.token }}
         run: |
-          bash ./github/workflows/scripts/test_branch_dev.bash
+          bash .github/workflows/scripts/test_branch_dev.sh
+          
